--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Movie Tube - B8 Assignment</title>
-
+      <link
+         rel="shortcut icon"
+         href="assets/icons8-media-64.png"
+         type="image/x-icon"
+      />
       <link
          href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css"
          rel="stylesheet"
@@ -13,6 +17,24 @@
       <script src="https://cdn.tailwindcss.com"></script>
    </head>
    <body>
+      <h1 class="text-center text-4xl my-4">Movie Tube</h1>
+      <section>
+         <div id="button-container" class="text-center">
+            <!-- dynamic buttons will be added here -->
+         </div>
+      </section>
+
+      <section class="mx-auto w-[80%] max-w-[1170px]">
+         <div id="movieContainer" class="grid lg:grid-cols-3">
+            <!-- dynamically show all cards -->
+         </div>
+         <div id="noDataDiv" class="text-center mt-10 space-y-4 hidden">
+            <h2>No Data To Show</h2>
+            <div class="flex justify-center">
+               <img src="assets/Icon.png" alt="" />
+            </div>
+         </div>
+      </section>
       <script src="scripts/movies.js"></script>
    </body>
 </html>
