dynamic card datas showing, now will work on verify icon

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
    <body>
       <h1 class="text-center text-4xl my-4">Movie Tube</h1>
       <section>
-         <div id="button-container" class="text-center">
+         <div id="button-container" class="text-center my-6">
             <!-- dynamic buttons will be added here -->
          </div>
       </section>
 
       <section class="mx-auto w-[80%] max-w-[1170px]">
-         <div id="movieContainer" class="grid lg:grid-cols-3">
+         <div id="movieContainer" class="grid lg:grid-cols-3 gap-6">
             <!-- dynamically show all cards -->
          </div>
          <div id="noDataDiv" class="text-center mt-10 space-y-4 hidden">
