added sort by view functionality

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
    <body>
       <h1 class="text-center text-4xl my-4">Movie Tube</h1>
       <section>
+         <div class="text-center my-6">
+            <button class="btn btn-secondary" id="sort-button">
+               Sort By View
+            </button>
+         </div>
+      </section>
+      <section>
          <div id="button-container" class="text-center my-6">
             <!-- dynamic buttons will be added here -->
          </div>
